# ksqlite

./: .gitignore  CHANGELOG.md  LICENSE  README.md  data.json  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  coverage.yml  pr-title.yml  release.yml
docs/: DESIGN-REVIEW-DECISIONS.md  DESIGN.md  IMPLEMENTATION-PLAN.md  README.md
docs/explanation/: architecture.md  durability.md  partition-lifecycle.md
docs/how-to/: check-partition-readiness.md  connect-to-a-secured-cluster.md  declare-queryable-columns.md  handle-failures.md  load-results-into-models.md  provision-changelog-topics.md  query-latest-per-entity.md  run-on-older-sqlite.md  use-as-standalone-storage.md  wire-into-your-consumer.md
docs/reference/: changelog-format.md  errors.md  ksqlite.md  logging.md  sql-schema.md  types.md
docs/tutorial/: build-a-local-store.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_21d94c0dfe72fd3d___init___py.html  z_21d94c0dfe72fd3d__ids_py.html  z_21d94c0dfe72fd3d__lifecycle_py.html  z_21d94c0dfe72fd3d__pool_py.html  z_21d94c0dfe72fd3d__read_py.html  z_21d94c0dfe72fd3d__schema_py.html  z_21d94c0dfe72fd3d__sql_py.html  z_21d94c0dfe72fd3d__state_py.html  z_21d94c0dfe72fd3d__store_py.html  z_21d94c0dfe72fd3d__topics_py.html  z_21d94c0dfe72fd3d__wire_py.html  z_21d94c0dfe72fd3d__write_py.html  z_21d94c0dfe72fd3d_errors_py.html  z_21d94c0dfe72fd3d_types_py.html
src/ksqlite/: __init__.py  _ids.py  _lifecycle.py  _pool.py  _read.py  _schema.py  _sql.py  _state.py  _store.py  _topics.py  _wire.py  _write.py  errors.py  types.py
tests/: conftest.py
tests/conformance/: conftest.py  test_clients.py
tests/e2e/: conftest.py  test_e2e_core.py  test_e2e_failure_modes.py  test_e2e_infra.py
tests/kafka_fakes/: test_lifecycle.py  test_read_interplay.py  test_store.py  test_topics.py  test_write.py
tests/sqlite/: conftest.py  test_pool.py  test_read.py  test_schema.py  test_sql_ddl.py
tests/support/: fakes.py  kafka_env.py  recording_pool.py
tests/unit/: test_fakes.py  test_ids.py  test_placeholder.py  test_public_surface.py  test_sql.py  test_state.py  test_store_helpers.py  test_wire.py
